<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivityChangeInfo">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView4"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="16dp"
            android:text="@string/prompt_name" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:layout_above="@+id/editTextTextPassword3"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="40dp"
            android:text="@string/prompt_name"
            android:textColorHighlight="@color/teal_700"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/editTextTextPassword3"
            android:layout_marginStart="60dp"
            android:layout_marginBottom="12dp"
            android:text="@string/prompt_password" />

        <EditText
            android:id="@+id/editTextTextPassword3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/editTextTextPassword4"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="40dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/prompt_password"
            android:inputType="textPassword"
            android:minHeight="48dp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/editTextTextPassword4"
            android:layout_alignParentStart="true"
            android:layout_marginStart="40dp"
            android:text="@string/repeatPwd" />

        <EditText
            android:id="@+id/editTextTextPassword4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/button3"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="40dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/prompt_password"
            android:inputType="textPassword"
            android:minHeight="48dp" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="4dp"
            android:layout_marginBottom="40dp"

            android:background="@color/blue"
            android:text="@string/upgradePwd"
            android:textColor="@color/white"
            tools:ignore="TextContrastCheck" />

        <View
            android:id="@+id/view1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/button3"
            android:layout_marginBottom="40dp"
            android:background="#303F9F"
            android:paddingTop="40dp" />

        <TextView
            android:id="@+id/oldManNameTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/view1"
            android:layout_alignBaseline="@+id/oldManNameEv"
            android:layout_alignParentStart="true"
            android:layout_marginStart="40dp"
            android:text="@string/oldManName" />

        <EditText
            android:id="@+id/oldManNameEv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/view1"
            android:layout_marginBottom="40dp"
            android:layout_toEndOf="@+id/oldManNameTv"
            android:autofillHints="姓名"
            android:ems="10"
            android:hint="@string/oldManName"
            android:inputType="text"
            android:minHeight="48dp" />

        <TextView
            android:id="@+id/oldManContactTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/oldManNameTv"
            android:layout_alignParentStart="true"
            android:layout_alignBaseline="@+id/oldManContactEv"
            android:layout_marginStart="40dp"
            android:text="@string/contactNumber"/>

        <EditText
            android:id="@+id/oldManContactEv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/oldManNameEv"
            android:layout_marginBottom="40dp"
            android:layout_toEndOf="@+id/oldManContactTv"
            android:autofillHints="联系方式"
            android:ems="10"
            android:hint="@string/contactNumber"
            android:inputType="number"
            android:minHeight="48dp" />

        <Button
            android:id="@+id/submitOldManInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_below="@+id/oldManContactEv"
            android:layout_marginStart="4dp"
            android:background="@color/blue"
            android:text="@string/addOldManInfo"
            android:textColor="@color/white"
            tools:ignore="TextContrastCheck" />
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>