<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity_changePwd">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView4"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="16dp"
            android:text="@string/prompt_name" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:layout_above="@+id/editTextTextPassword3"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="40dp"
            android:text="@string/prompt_name"
            android:textColorHighlight="@color/teal_700"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/editTextTextPassword3"
            android:layout_marginStart="60dp"
            android:layout_marginBottom="12dp"
            android:text="@string/prompt_password" />

        <EditText
            android:id="@+id/editTextTextPassword3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/editTextTextPassword4"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="40dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/prompt_password"
            android:inputType="textPassword"
            android:minHeight="48dp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/editTextTextPassword4"
            android:layout_alignParentStart="true"
            android:layout_marginStart="40dp"
            android:text="@string/repeatPwd" />

        <EditText
            android:id="@+id/editTextTextPassword4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/button3"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="40dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/prompt_password"
            android:inputType="textPassword"
            android:minHeight="48dp" />


        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="4dp"
            android:background="@color/blue"
            android:text="@string/upgradePwd"
            android:textColor="@color/white"
            tools:ignore="TextContrastCheck" />
    </RelativeLayout>


    <!--    <Spinner-->
    <!--        android:id="@+id/spinner"-->
    <!--        android:layout_width="0dp"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginStart="1dp"-->
    <!--        android:layout_marginEnd="1dp"-->
    <!--        android:contentDescription="@string/title_home"-->
    <!--        android:minHeight="32dp"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent" />-->

</androidx.constraintlayout.widget.ConstraintLayout>